# core

./: .gitignore  .info  .markdownlint.json  AGENTS.md  ARCHITECTURAL_ANALYSIS.md  BLANK_LINE_CONVERSION_PLAN.md  BRANCH_COMPARISON.md  BUG_VERBATIM_GROUPS_BLANK_LINES.md  Cargo.toml  DOCUMENTATION_RECOMMENDATIONS.md  INLINE_MARKER_FIX.md  LEX_OUTPUT_QA.md  LINETREEVIZ.lex  LOCATION_REVIEW.md  PARSER_DUPLICATE_ANALYSIS.txt  PHASE6_COMPLETE.md  PR_DESCRIPTION.md  README.txt  REFACTORING_CODE_CHANGES.md  REFACTORING_PLAN.txt  REFACTORING_ROADMAP.md  debug_parse  dist-workspace.toml  inspect-formats.lex  lexlocal.code-workspace  package-lock.json  temp_test_file.txxt  test_foreign.txxt
lex-babel/: Cargo.toml  README.lex
lex-babel/css/: baseline.css
lex-babel/css/themes/: theme-fancy-serif.css  theme-modern.css
lex-babel/src/: error.rs  format.rs  lib.rs  publish.rs  registry.rs  transforms.rs
lex-babel/src/common/: flat_to_nested.rs  mod.rs  nested_to_flat.rs
lex-babel/src/common/verbatim/: mod.rs  table.rs
lex-babel/src/formats/: mod.rs
lex-babel/src/formats/common/: mod.rs  trait_helpers.rs
lex-babel/src/formats/domtreeviz/: mod.rs
lex-babel/src/formats/html/: mod.rs  serializer.rs
lex-babel/src/formats/lex/: formatting_rules.rs  mod.rs  serializer.rs
lex-babel/src/formats/linetreeviz/: mod.rs
lex-babel/src/formats/markdown/: mod.rs  parser.rs  serializer.rs
lex-babel/src/formats/nodemap/: mod.rs
lex-babel/src/formats/pandoc/: mod.rs
lex-babel/src/formats/pdf/: mod.rs
lex-babel/src/formats/png/: mod.rs
lex-babel/src/formats/tag/: mod.rs
lex-babel/src/formats/treeviz/: mod.rs
lex-babel/src/ir/: events.rs  from_lex.rs  mod.rs  nodes.rs  to_events.rs  to_lex.rs
lex-babel/src/mappings/: flat_to_nested.rs  heading_hierarchy.rs  mod.rs  nested_to_flat.rs
lex-babel/src/templates/: asset.rs  mod.rs  util.rs  verbatim.rs
lex-babel/tests/: lib.rs  pdf.rs
lex-babel/tests/common/: mod.rs
lex-babel/tests/html/: annotations.rs  export.rs  mod.rs  table.rs
lex-babel/tests/html/snapshots/: lib__html__export__kitchensink.snap  lib__html__export__trifecta_010_paragraphs_sessions_flat_single.snap  lib__html__export__trifecta_010_paragraphs_sessions_flat_single.snap.new  lib__html__export__trifecta_020_paragraphs_sessions_flat_multiple.snap  lib__html__export__trifecta_060_nesting.snap
lex-babel/tests/mappings/: mod.rs
lex-babel/tests/markdown/: annotations.rs  export.rs  frontmatter.rs  import.rs  mod.rs  sessions.rs  table.rs
lex-babel/tests/markdown/snapshots/: lib__markdown__export__kitchensink.snap  lib__markdown__export__kitchensink_markdown.snap
lex-cli/: Cargo.toml  build.rs
lex-cli/completions/: README.md
lex-cli/src/: help.rs  main.rs  transforms.rs
lex-cli/src/viewer/: tests.rs  viewer.rs
lex-cli/tests/: markdown_import.rs  nodemap.rs
lex-lsp/: COMMANDS.md  Cargo.toml  commands.json
lex-lsp/src/: lib.rs  server.rs
lex-lsp/src/features/: commands.rs  document_links.rs  document_symbols.rs  document_utils.rs  folding_ranges.rs  formatting.rs  go_to_definition.rs  hover.rs  inline.rs  mod.rs  reference_targets.rs  references.rs  semantic_tokens.rs  spellcheck.rs  test_support.rs
lex-lsp/tests/: robustness_proptest.rs
lex-parser/: Cargo.toml  README.md
lex-parser/scripts/: coverage-by-directory.sh  parse_coverage.py
lex-parser/src/: lex.rs  lib.rs
lex-parser/src/lex/: 53-ast-tree.lex  annotation.rs  assembling.rs  ast.rs  building.rs  inlines.rs  lexing.rs  loader.rs  mod.rs  parsing.rs  testing.rs  token.rs  transforms.rs
lex-parser/src/lex/ast/: elements.rs  (+7 more)
lex-parser/tests/: compile_fail.rs  doc_collections.rs  elements_annotations.rs  elements_definitions.rs  elements_lists.rs  elements_paragraphs.rs  elements_sessions.rs  elements_verbatim.rs  elements_verbatim_linebased.rs  experimental_parser_kitchensink.rs  lexer_proptest.rs  linebased_parser.rs  location_integrity.rs  parameter_proptest.rs  parser.rs  parser_kitchensink.rs  pipeline_executor_integration.rs  runtime_type_safety.rs  spec_documents.rs  spec_validation.rs  test_blank_line_group_parsing.rs  tokenizer_documents.rs  tokenizer_elements.rs  verbatim_dual.rs
lex-parser/tests/compile_fail/: annotation_rejects_session.rs  annotation_rejects_session.stderr  container_type_safety.rs  definition_rejects_session.rs  definition_rejects_session.stderr
lex-parser/tests/detokenizer/: main.rs
lex-parser/tests/snapshots/: experimental_parser_kitchensink___parser_kitchensink_snapshot.snap  experimental_parser_kitchensink___parser_kitchensink_snapshot.snap.new  parser_kitchensink__parser_kitchensink_snapshot.snap  tokenizer_documents__benchmark_010_kitchensink.snap  tokenizer_documents__trifecta_010_paragraphs_sessions_flat_single.snap  tokenizer_documents__trifecta_020_paragraphs_sessions_flat_multiple.snap  tokenizer_documents__trifecta_030_sessions_nested_multiple.snap  tokenizer_documents__trifecta_050_paragraph_lists.snap  tokenizer_elements__annotation_flat_block_simple.snap  tokenizer_elements__annotation_flat_marker_with_params.snap  tokenizer_elements__annotation_nested_in_session.snap  tokenizer_elements__definition_flat_multiline_label.snap  tokenizer_elements__definition_flat_simple.snap  tokenizer_elements__definition_nested_in_session.snap  tokenizer_elements__list_flat_mixed_decorations.snap  tokenizer_elements__list_flat_simple_parenthetical.snap  tokenizer_elements__paragraph_flat_punctuation.snap  tokenizer_elements__session_flat_numbered.snap  tokenizer_elements__session_flat_unnumbered.snap  tokenizer_elements__session_nested_multiple_levels.snap  tokenizer_elements__session_nested_one_level.snap  tokenizer_elements__verbatim_flat_marker_no_content.snap  tokenizer_elements__verbatim_flat_simple.snap  tokenizer_elements__verbatim_flat_with_label.snap  tokenizer_elements__verbatim_nested_in_session.snap
lex-viewer/: Cargo.toml  build.rs
lex-viewer/completions/: README.md  _lexv  lexv.bash  lexv.fish
lex-viewer/src/: main.rs  viewer.rs
lex-viewer/src/viewer/: app.rs  fileviewer.rs  model.rs  tests.rs  treeviewer.rs  ui.rs  viewer.rs
(+1163 files in other folders)
