[package]
name = "lex"
version = "0.1.0"
edition = "2021"
authors = ["lex contributors"]
description = "A parser for the lex format"
license = "MIT"
repository = "https://github.com/adebert/lex"
keywords = ["parser", "format", "lex"]
categories = ["parsing", "text-processing"]

[lib]
# Disable doctests for the library; docs contain lex examples that aren't Rust
doctest = false

[[bin]]
name = "lex"
path = "src/bin/lex.rs"
# We use plenty of lex in code docs, and having to explicitly avoid error is not worth it
doctest = false

[dependencies]
logos = "0.14"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chumsky = "0.9"
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
regex = "1.12.2"
once_cell = "1.20"

[dev-dependencies]
proptest = "1.4"
insta = "1.39"
rstest = "0.18"
