[workspace]
members = [
    "lex-config",
    "lex-parser",
    "lex-analysis",
    "lex-babel",
    "lex-cli",
    "lex-viewer",
    "lex-lsp",
]
resolver = "2"

# Shared dependency versions across workspace
[workspace.dependencies]
logos = "0.14"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
regex = "1.12.2"
once_cell = "1.20"
proptest = "1.4"
insta = "1.39"
config = "0.14"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
