[package]
name = "lex-babel"
version = "0.1.16"
edition = "2021"

[lib]
doctest = false

[dependencies]
lex-parser = { path = "../lex-parser" }
comrak = "0.29"
html5ever = "0.35"
markup5ever_rcdom = "0.35"
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
insta = { workspace = true }
