[package]
name = "lex-babel"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
lex-parser = { path = "../lex-parser" }
comrak = "0.29"
html5ever = "0.35"
markup5ever_rcdom = "0.35"
serde = { workspace = true, features = ["derive"] }
tempfile = "3"
which = "4"
url = "2.4"
pathdiff = "0.2"

[dev-dependencies]
insta = { workspace = true }
once_cell = "1"
regex = "1"
