[package]
name = "lex-cli"
version = "0.1.0"
edition = "2021"
authors = ["lex contributors"]
description = "Command-line interface for the lex format"
license = "MIT"
repository = "https://github.com/adebert/lex"
keywords = ["cli", "format", "lex"]
categories = ["command-line-utilities"]

[package.metadata.dist]
display-name = "lex"

[[bin]]
name = "lex"
path = "src/main.rs"
# We use plenty of lex in code docs, and having to explicitly avoid error is not worth it
doctest = false

[dependencies]
lex-parser = { path = "../lex-parser" }
lex-babel = { path = "../lex-babel" }
lex-config = { path = "../lex-config" }
clap = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
clap = { workspace = true }
clap_complete = "4.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3"
