[package]
name = "lex-lsp"
version = "0.1.13"
edition = "2021"

[lib]
doctest = false

[dependencies]
lex-parser = { path = "../lex-parser" }
lex-analysis = { path = "../lex-analysis" }
lex-babel = { path = "../lex-babel" }
tower-lsp = "0.20"
lsp-types = "0.94"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
similar = { version = "2", features = ["text"] }

[dev-dependencies]
lex-analysis = { path = "../lex-analysis", features = ["test-support"] }
