[package]
name = "lex-lsp"
version = "0.2.1"
edition = "2021"

[lib]
doctest = false

[dependencies]
lex-parser = { path = "../lex-parser" }
lex-analysis = { path = "../lex-analysis" }
lex-babel = { path = "../lex-babel" }
tower-lsp = "0.20"
lsp-types = "0.94"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
spellbook = "0.3.5"

[dev-dependencies]
lex-analysis = { path = "../lex-analysis", features = ["test-support"] }
tempfile = "3"
proptest = { workspace = true }
