[package]
name = "lex-viewer"
version = "0.2.1"
edition = "2021"
authors = ["lex contributors"]
description = "Interactive terminal viewer for the lex document format"
license = "MIT"
repository = "https://github.com/adebert/lex"
keywords = ["cli", "viewer", "lex"]
categories = ["command-line-utilities"]
default-run = "lexv"

[package.metadata.dist]
dist = false

[[bin]]
name = "lexv"
path = "src/main.rs"
doctest = false

[dependencies]
lex-parser = { path = "../lex-parser" }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }

[build-dependencies]
clap = { workspace = true }
clap_complete = "4.4"
